[package]
name = "witter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0.145", features = ["derive"] }


















####OLD
# async-std = {version = "1.12.0",features = ["attributes", "unstable"]}
# chrono = "0.4.22"
# dotenv = "0.15.0"
# log = "0.4.17"
# pretty_env_logger = "0.4.0"
# serde = { version = "1.0.144", features = ["derive"] }
# sqlx = { version = "0.6.2", features = [
#     "runtime-async-std",
#     "macros",
#     "chrono",
#     "json",
#     "postgres",
#     "uuid",
#     "runtime-async-std-native-tls",
# ] }
# tide = "0.16.0"
# uuid = "1.1.2"
